cmake_minimum_required(VERSION 3.13)
project(addGUI)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(QT_INCLUDE_PATH /usr/include/arm-linux-gnueabihf/qt5)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5Core REQUIRED)
add_executable(addGUI main.cpp mainwindow.cpp mainwindow.hpp mainwindow.ui Database_handler.cpp Database_handler.hpp)
target_include_directories(addGUI PUBLIC ${QT_INCLUDE_PATH}/QtWidgets ${QT_INCLUDE_PATH}/QtGui ${QT_INCLUDE_PATH}/QtCore ${QT_INCLUDE_PATH} ${QT_INCLUDE_PATH}/QtSql)
target_link_libraries(addGUI PUBLIC Qt5Widgets Qt5Gui Qt5Core Qt5Sql)
